@@ -1,6 +1,9 @@
 version 0.2 - ???
+ . Added particle system.
+    . uses VBO + POINT_SPRITES
+    . Built-in systems: Fire, Fireworks, Sun, Galaxy
+	. supports: gravity, radial, tangential, color, size, texture, direction, spread (with its variation)
  . added support to display FPS
- . Added particle system: Fire, Fireworks
  
 version 0.1 - 25-jun-2008:
 
